--- a/index.html
+++ b/index.html
@@ -24,25 +24,32 @@
       <button value="Vuelve todos los parámetros al diseño original" id="reset">Restablecer valores</button>
     </div>
 
-    <div>
-      <h1>WYNIA</h1>
-
-      <div class="image">
-        <img src="https://source.unsplash.com/random" alt="Lorem Ipsum">
-        <div class="caption">Lorem Ipsum</div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>WYNIA - haciendo sitios accesibles</h1>
+          <p>Hace un tiempo atrás comencé con el proyecto de la realización del sitio web de Plan Municipal de Accesibilidad (PLAMAC). Comencé a introducirme poco a poco en el mundo de la accesibilidad, aprendiendo poco a poco. El día de hoy sigo aprendiendo y sigo tratando de formarme en la temática de la accesibilidad web.</p>
+          <p>Si bien no soy un desarrollador, tengo un perfil de diseñador, en este momento orientado al UX y el UI, tomé la iniciativa de ver como podía ir rompiendo más barreras dentro del sitio web del plan, y comencé a programar el proyecto que denominé WYNIA por las siglas en inglés (What You Need Is Accessibility) que en castellano significa "Lo que necesitas es accesibilidad".</p>
+          <p>No es otra cosa que un plugin para poder brindar distintas opciones de accesibilidad a cualquier sitio web, con distintas características. Por el momento lo estoy desarrollando solo, pero todo aquel que quiera formar parte lo invito a colaborar en GitHub, el proyecto es Open Source y con licencia de Creative Commons con atribución.</p>
+          <p>Atribución (by): Se permite cualquier explotación de la obra, incluyendo la explotación con fines comerciales y la creación de obras derivadas, la distribución de las cuales también está permitida sin ninguna restricción.</p>
+        </div>
       </div>
-
-      <div class="lorem-ipsum">
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Curabitur vitae hendrerit mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris lacinia scelerisque nibh nec gravida.
-          Duis malesuada nec nibh sit amet pulvinar.
-          Phasellus congue porttitor arcu, ut suscipit nibh aliquam vel.
-          Nunc arcu lectus, egestas ut sem ac, euismod porttitor eros.
-          Phasellus tincidunt consequat pharetra. Maecenas sodales purus at nulla finibus dapibus.
-          Nullam varius at nisl vel euismod. Fusce aliquet ligula non tempor fermentum.
-          Nam fermentum posuere mauris, quis aliquam nibh dictum sed.</p>
+      <div class="row">
+        <div class="col-12">
+          <h2>Funcionalidades de WYNIA</h2>
+          <p>En el este momento el proyecto cuenta con algunas funcionalidades básicas, pero me gustaría ir incorporando más con el correr del tiempo.</p>
+          <h3>Manejo del tipográfico</h3>
+          <p>El sistema permite aumentar y achicar la misma de forma simple, como así también modificar el interlineado y el interletrado</p>
+          <p>Se puede cambiar la familia tipográfica por sans-serif, serif, o la fuente creada para personas con dislexia <a href="https://www.opendyslexic.org/" target="_blank">Open Dyslexic</a></p>
+          <h3>Colores</h3>
+          <p>Actualmente la única opción que existe en el proyecto es de alto contraste con fondo negro y tipografías amarillas.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h2>Modo de instalación</h2>
+          <p>...</p>
+        </div>
       </div>
     </div>
     <script src="./js/wynia.js"></script>
